--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,11 +2,14 @@ apply plugin: 'java'
 
 def libs = rootProject.ext.libraries;
 
+  sourceCompatibility =JavaVersion.VERSION_1_7
+  targetCompatibility =JavaVersion.VERSION_1_7
+
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile project(':model')
 
   //test dependencies
-  testCompile 'junit:junit:4.11'
-  testCompile 'org.mockito:mockito-core:1.9.5'
+//  testCompile 'junit:junit:4.11'
+//  testCompile 'org.mockito:mockito-core:1.9.5'
 }
